remove lengths from columns